--- a/src/components/SingleBook.css
+++ b/src/components/SingleBook.css
@@ -1,6 +1,6 @@
 .card {
   border-radius: 25px;
-  height: 100%;
+  height: auto;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
@@ -10,6 +10,11 @@
   object-fit: cover;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
+}
+
+.card-body {
+  height: 150px;
+  overflow-y: hidden;
 }
 
 .card-title {
